resources/network/first-networkpolicy-demo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-traffic
spec:
  podSelector: 
    matchLabels:
      app: webapp
  policyTypes:
    - Ingress
  ingress: 
    - from:
      - podSelector:
          matchLabels:
            run: netshoot
