resources/network/first-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-traffic
spec:
  podSelector:
    matchLabels:
      app: webserver
  policyTypes:
    - Ingress
    - Egress
  ingress: 

    - from:
      - podSelector:
          matchLabels:
            role: frontend
      - podSelector:
          matchLabels:
            role: backend
      - namespaceSelector:
          matchLabels:
            name: production
      - ipBlock:
          cidr: 10.42.1.0/24
          except:
            - 10.0.5.0/24
  egress:
    - to:
      - podSelector:
          matchLabels:
            role: database
      - namespaceSelector:
          matchLabels:
            name: monitoring
      - ipBlock:
          cidr: 10.0.0.0/16
          except:
            - 10.0.5.0/24
      ports:
        - protocol: TCP
          port: 80
        - protocol: UDP
          port: 53
